--- a/server/.gitignore
+++ b/server/.gitignore
@@ -39,10 +39,10 @@ jspm_packages/
 *.tgz
 
 # dotenv environment variables file
-# .env.local
-# .env.development.local
-# .env.test.local
-# .env.production.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # VSCode settings folder
 .vscode/
