--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/klype
-ADMIN_USER=admin
-ADMIN_PASS=supersecure
+MONGO_URI=mongodb+srv://akshay:akshay@klype.2su8ctc.mongodb.net/klype
+ADMIN_USER=wisemango
+ADMIN_PASS=wisemango@123
