--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,5 +1,5 @@
 # Node modules
-/node_modules/
+/node_modules
 
 # Environment variables
 /.env
@@ -39,10 +39,10 @@ jspm_packages/
 *.tgz
 
 # dotenv environment variables file
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
 # VSCode settings folder
 .vscode/
